fixing issues with the disable lucene flag